force-app/main/default/objects/Contact/fields/Test_Contact_Custom_Field__c.field-meta.xml
<CustomField>
    <fullName>Test_Contact_Custom_Field__c</fullName>
    <label>Test Contact Custom Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>