force-app/main/default/objects/Contact/recordTypes/Contact_RT.recordType-meta.xml
<RecordType>
    <fullName>Contact_RT</fullName>
    <active>true</active>
    <label>Contact RT</label>
</RecordType>