force-app/main/default/objects/Contact/recordTypes/Contact_RT_2.recordType-meta.xml
<RecordType>
    <fullName>Contact_RT_2</fullName>
    <active>true</active>
    <label>Contact RT 2</label>
</RecordType>