force-app/main/default/objects/Contact/validationRules/Contact_Status_New.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_Status_New</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL( Contact_Status__c ,&quot;New&quot;),
  OR(
    ISBLANK(Phone),
    ISBLANK(Fax)
    )  
)</errorConditionFormula>
    <errorMessage>Phone and Fax should be applicable for only new contact</errorMessage>
</ValidationRule>