force-app/main/default/objects/Contact/validationRules/Mobile_no_should_not_be_Greater_than_10.validationRule-meta.xml
<ValidationRule>
    <fullName>Mobile_no_should_not_be_Greater_than_10</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(REGEX(Phone, &quot;^[0-9]{10}$&quot;))</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Mobile should contain 10 digits</errorMessage>
</ValidationRule>