force-app/main/default/objects/Contact/validationRules/Mobile_number_must_start_with_1.validationRule-meta.xml
<ValidationRule>
    <fullName>Mobile_number_must_start_with_1</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(REGEX(  Phone , &quot;^\\+1\\d{10}$&quot;))</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Phone number should start with +1 and contains 10 digits</errorMessage>
</ValidationRule>